# gitlab-mirror-maker

./: README.md  pyproject.toml
mirrormaker/: cli.py  config.py  github.py  gitlab.py  glab_cli.py  http_client.py  mirrormaker.py
tests/: test_config.py  test_glab_cli.py  test_mirrormaker.py
