[tool.poetry]
name = "gitlab-mirror-maker"
version = "0.5.0"
description = "Automatically mirror your repositories from GitLab to GitHub"
authors = ["Grzegorz Dlugoszewski <pypi@grdl.dev>"]
maintainers = [
    "Grzegorz Dlugoszewski <pypi@grdl.dev>",
    "nathfavour <116535483+nathfavour@users.noreply.github.com>"
]
readme = "README.md"
license = "MIT"
repository = "https://gitlab.com/nathfavour/gitlab-mirror-maker"
keywords = ["gitlab", "github"]


packages = [
    { include = "mirrormaker" }
]

[tool.poetry.scripts]
gitlab-mirror-maker = "mirrormaker.mirrormaker:mirrormaker"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.23.0"
click = "^7.1.1"
tabulate = "^0.8.7"
typing-extensions = "^4.0.0"
pathlib = "^1.0.1"

[tool.poetry.dev-dependencies]
pylint = "^2.4.4"
autopep8 = "^1.5.1"
responses = "^0.10.12"
pytest = "^5.4.1"
pytest-cov = "^2.8.1"
mypy = "^0.910"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
